[package]
name = "chaotic-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
log = "0.4.28"
anyhow = "1.0.100"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
