[package]
name = "chaotic-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
log = "0.4.28"
anyhow = "1.0.100"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx-conditional-queries = { version = "0.3.2", features = ["sqlite"] }
